--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
-		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"express": "^4.21.2",
+		"mongoose": "^8.19.0"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
